# Python-Can-Upper-Computer

./: LICENSE  README.md  build_exe.py  main.py  pyproject.toml  requirements.txt
app/: can_worker.py  config_utils.py  main_window.py  replay_worker.py  ui_layout.py
captures/: capture_20260615_165723.asc  capture_20260615_165953.blf  capture_20260615_174113.asc  capture_20260615_174119.blf  test_20260615_155645.asc  test_20260615_160222.csv
tests/: pcan_test.py
