[project]
name = "python-can上位机"
version = "2.0.0"
description = "CAN bus debugging desktop application (上位机) — DBC-aware monitor, waveform, builder, capture & replay"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt5>=5.15.0,<=5.15.11",
    "pyqtgraph>=0.12.0",
    "numpy>=1.19.0",
    "python-can>=4.0.0",
    "cantools>=37.0.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=5.0.0",
]

[project.scripts]
can-debugger = "main:main"

[tool.uv]
required-environments = ["sys_platform == 'win32'"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
